--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>HOME PAGE </title>
+</head>
+<body>
+			<hI>HELLO WORLD </hI>
+<nav>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="About.html">About</a></li>
+	<li><a href="services.html">Srevices</a></li>
+	<li><a href="Contactus.html">Contactus</a></li>
+	<li><a href="Blog.html">Blog</a></li>
+</ul>
+</nav>
+</header>
+<h1>Welcome to home Page</h1>
+HTML is the markup language for creating web blocks and building applications. Now what is the full meaning of HTML.HTML means Hyper Text Markup language.
+
+<p>
+<img src="image/image.jpg" width="150" height="150">
+<P>
+Software application is the collection of instruictions, data or programmes used to operate computer and specific task.
+<img src="image/image (2).jpg" width="150" height="150"
+</body>
+</html>
