--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 HTML is the markup language for creating web blocks and building applications. Now what is the full meaning of HTML.HTML means Hyper Text Markup language.
 
 <p>
-<img src="image/image.jpg" width="150" height="150">
+<img src="image.jpg" width="150" height="150">
 <P>
 Software application is the collection of instruictions, data or programmes used to operate computer and specific task.
-<img src="image/image (2).jpg" width="150" height="150"
+<img src="image (2).jpg" width="150" height="150"
 </body>
 </html>
