--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<title>HOME PAGE </title>
 </head>
 <body>
+<style type="text/css">
+.firstdiv{
+	color:blue;
+}
 			<hI>HELLO WORLD </hI>
 <nav>
 <ul>
@@ -24,5 +28,10 @@ HTML is the markup language for creating web blocks and building applications. N
 <P>
 Software application is the collection of instruictions, data or programmes used to operate computer and specific task.
 <img src="image (2).jpg" width="150" height="150"
+	
+	<h2> html attribute</h2>
+<div>class="firstdiv">This is my first div</div>
+<div>class="seconddiv id="firstdiv style=">This is my div</div>
+	
 </body>
 </html>
