--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>HOME PAGE </title>
 </head>
 <body>
+	
 
 			<hI>HELLO WORLD </hI>
 <nav>
@@ -21,14 +22,24 @@
 HTML is the markup language for creating web blocks and building applications. Now what is the full meaning of HTML.HTML means Hyper Text Markup language.
 
 <p>
-<img src="image.jpg" width="150" height="150">
+<img src="image.jpg" width="200" height="200">
 <P>
 Software application is the collection of instruictions, data or programmes used to operate computer and specific task.
-<img src="image (2).jpg" width="150" height="150"
+<P>
+<img src="image (2).jpg" width="200" height="200"
+</p>
 	
-	<h2> html attribute</h2>
+	<h2> HTML ATTRIBUTE</h2>
 <div>class="firstdiv">This is my first div</div>
 <div>class="seconddiv id="firstdiv style=">This is my div</div>
 	
 </body>
 </html>
+
+
+
+
+
+
+
+
