--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style type="text/css">
+.firstdiv{
+  color:blue;
+}
 	<title>HOME PAGE </title>
 </head>
 <body>
@@ -31,7 +35,8 @@ Software application is the collection of instruictions, data or programmes used
 	
 	<h2> HTML ATTRIBUTE</h2>
 <div>class="firstdiv">This is my first div</div>
-<div>class="seconddiv id="firstdiv style=">This is my div</div>
+<div>class="seconddiv" id="firstdiv style=">This is my div</div>
+
 	
 </body>
 </html>
