--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<title>HOME PAGE </title>
 </head>
-	<style type="text/css">
+<style type="text/css">
 .firstdiv{
   color:blue;
 }
@@ -36,8 +36,8 @@ Software application is the collection of instruictions, data or programmes used
 </p>
 	
 	<h2> HTML ATTRIBUTE</h2>
-<div>class="firstdiv">This is my first div</div>
-<div>class="seconddiv" id="firstdiv style=">This is my div</div>
+<div class="firstdiv">This is my first div</div>
+<div class="seconddiv" id="firstdiv style=">This is my div</div>
 
 	
 </body>
