--- a/index.html
+++ b/index.html
@@ -1,1 +1,204 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>Using table to design a web page</title>
+
+	</head>
+	<body>
+		<h1>speed motors</h1>
+		<style type="text/css">
+		body{
+			width: 80%;
+			margin: 0px auto;
+		}
+		.menu_table{
+			background: brown;
+
+		}
+		ul {
+			list-style-type: none;
+		}
+		li{
+			display:inline-block;
+			padding: 10px;
+			margin-left: 3px;
+			background: #ccc;
+		}
+		a{
+			text-decoration: none;
+			color: black;
+
+		}
+		li:hover{
+			background: white;
+			padding: 11px;a
+
+		}
+		table{
+			width: 100%;
+		}
+		tr{
+			width:100%;
+		}
+	</style>
+	
+	<table>
+	
+	<!-----fisrt row for logo and menu--------------------->
+	<tr class="menu_table">
+
+	<td><a href="index.html"><img width="100" height="100" src="image/logo.jpg"></a></td>
+
+	<td>
+	<ul>
+
+	<li><a href="#">Home</a></li>
+	<li><a href="#">About</a></li>
+	<li><a href="#">Services</a></li>
+	<li><a href="#">Our Team</a></li>
+	<li><a href="#">Contact Us</a></li>
+</ul>
+</td>
+</tr>
+
+</table>
+
+<table>
+	
+<tr>
+<td><img src="image/image11.jpg" width="800" height="600"></td>
+<td>
+	<h1>Get your best cars</h1>
+	<p>Experience the thrill of driving with speed Motors</p>
+</td>
+</tr>
+</table>
+
+
+<table>
+	<tr>
+	<td><h1>About Us</h1>
+<p>Speed motors is a leading car manufacturer and service provider. We specialize in designig and building high-perfumance vehicles that deliver exeptional driving experience</td></p>
+
+<td><img src="image/image4.jpg"width="200" height="220"></td>
+</tr>
+</table>
+
+
+<table>
+<h1>Our services</h1> 
+ <ul>
+ 	<tr>
+ 	<li>car sales</li>
+ 	<li>car mentenance and repair</li>
+ 	<li>custon car design</li>
+ 	<li>car rental services</li>
+ </tr>
+ <ul>
+</table>
+<table>
+<ul>
+ <tr>
+ 	<li>car sales</li>
+ 	<li>car mentenance and repair</li>
+ 	<li>custon car design</li>
+ 	<li>car rental services</li>
+ </tr>
+ </ul>
+</table>
+
+<h1>Our Team</h1>
+<table>
+	<tr>
+
+<td><img src="image/image1.jpg"width="200" height="200">
+<td><img src="image/image2.jpg"width="200" height="200">
+<td><img src="image/image3.jpg"width="200" height="200">
+
+</tr>
+</table>
+
+<h1>Contact Us</h1>
+
+
+	<tr>
+	<td>
+		<form>
+		<label for=" name">Full name:</label>
+		<input type="text" id="name" name="name"placeholder="Enter your full name">
+		<br>
+		<br>
+
+		<label for="email">E-mail</label>
+		<input type="e-ami" id="e-mail" name="eamil" placeholder="Enter your emaila address">
+		<br>
+		<br>
+
+		<label for="phone">phone number</label>
+		<input type="number" id="phone" name="phone" placeholder="Enter your phone number">
+		<br>
+		<br>
+
+		<label for="message">message</label>
+		<textarea type="msg" name="msg" placeholder="Enter message"></textarea>
+		<br>
+		<br>
+
+
+		<input type="submit"name="send-msg" value="Send">
+	</form>
+	<br>
+</td>
+</tr>
+
+<footer>@2025 all right reserved Codediera Technologies. Designed by Codediera Group</footer>
+
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
